[gd_scene load_steps=31 format=3 uid="uid://dsqtnel040hel"]

[ext_resource type="PackedScene" uid="uid://bhmvhsrfsgk2j" path="res://Objects/Buildings/BuildingTemplate.tscn" id="1_ri5sr"]
[ext_resource type="Script" uid="uid://digju80nfbw0a" path="res://Objects/Buildings/torrent.gd" id="2_d2g3u"]
[ext_resource type="Texture2D" uid="uid://njsnttqo3qtt" path="res://Sprites/Buildings/Torrent.png" id="3_2r018"]
[ext_resource type="Script" uid="uid://ceyynby3qm75a" path="res://Resources/Attack/AttackResource.gd" id="3_c3c0x"]
[ext_resource type="Script" uid="uid://b31rxhp2hd877" path="res://Manager/enemy_detector.gd" id="4_lwr6g"]
[ext_resource type="Texture2D" uid="uid://crxlehp0st2v6" path="res://Sprites/UI/in Game/torrent.png" id="4_vgx3k"]
[ext_resource type="AudioStream" uid="uid://dhq4tomopgolt" path="res://Sounds/LaserSound.wav" id="5_cqh6p"]
[ext_resource type="Script" uid="uid://bpyfjjfqu7ghm" path="res://UX/audio_2d.gd" id="6_q54f1"]

[sub_resource type="Resource" id="Resource_ntmmc"]
script = ExtResource("3_c3c0x")
damage = 1
knockback = 1.0
crit_chance = 0.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_s06gm"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_cf1n5"]
atlas = ExtResource("3_2r018")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_msaxk"]
atlas = ExtResource("3_2r018")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_smqby"]
atlas = ExtResource("3_2r018")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkvy0"]
atlas = ExtResource("3_2r018")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhthu"]
atlas = ExtResource("3_2r018")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hjqu"]
atlas = ExtResource("3_2r018")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdwsw"]
atlas = ExtResource("3_2r018")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbyr1"]
atlas = ExtResource("3_2r018")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf7xi"]
atlas = ExtResource("3_2r018")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbfqo"]
atlas = ExtResource("3_2r018")
region = Rect2(48, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_hobbd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf1n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msaxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smqby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkvy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhthu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hjqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdwsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbyr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf7xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbfqo")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="Shader" id="Shader_dhseu"]
code = "shader_type canvas_item;
uniform float opacity;
uniform float r;
uniform float g;
uniform float b;
uniform float mix_color;
render_mode unshaded;

void vertex() {
    // Called for every vertex the material is visible on.
}

void fragment() {
    // Called for every pixel the material is visible on.
    vec4 texture_color = texture(TEXTURE, UV);
    if (texture_color.a != 0.0) {
        COLOR = vec4(mix(texture_color.rgb, vec3(r, g, b), mix_color), opacity);
    }
}

void light() {
    // Called for every pixel for every light affecting the CanvasItem.
    float cNdotL = max(1.0, dot(NORMAL, LIGHT_DIRECTION));
    LIGHT = vec4(LIGHT_COLOR.rgb * COLOR.rgb * LIGHT_ENERGY * cNdotL, LIGHT_COLOR.a);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ey4yk"]
resource_local_to_scene = true
shader = SubResource("Shader_dhseu")
shader_parameter/opacity = 0.0
shader_parameter/r = 1.0
shader_parameter/g = 1.0
shader_parameter/b = 0.0
shader_parameter/mix_color = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6xjr8"]
radius = 250.0

[sub_resource type="CircleShape2D" id="CircleShape2D_q7f57"]
radius = 12.0416

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_th3tk"]
height = 34.0

[sub_resource type="Animation" id="Animation_lthtt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("damage_shader:material:shader_parameter/opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("damage_shader:material:shader_parameter/mix_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("damage_shader:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("damage_shader:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bxxsq"]
resource_name = "hit"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("damage_shader:material:shader_parameter/opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("damage_shader:material:shader_parameter/mix_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("damage_shader:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2.2, 2.2), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("damage_shader:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -14), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cx17e"]
_data = {
&"RESET": SubResource("Animation_lthtt"),
&"hit": SubResource("Animation_bxxsq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3yn4l"]
size = Vector2(48, 32)

[node name="Torrent" instance=ExtResource("1_ri5sr")]
collision_mask = 32
script = ExtResource("2_d2g3u")
atk_res = SubResource("Resource_ntmmc")
radar_icon = ExtResource("4_vgx3k")
has_health = true
max_health = 250
current_health = 250

[node name="sprite" parent="." index="0"]
material = SubResource("CanvasItemMaterial_s06gm")
sprite_frames = SubResource("SpriteFrames_hobbd")
autoplay = "default"

[node name="damage_shader" parent="." index="1"]
material = SubResource("ShaderMaterial_ey4yk")
sprite_frames = SubResource("SpriteFrames_hobbd")
animation = &"default"

[node name="EnemyDetectorArea" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 4
script = ExtResource("4_lwr6g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectorArea" index="0"]
visible = false
shape = SubResource("CircleShape2D_6xjr8")

[node name="shoot_time" type="Timer" parent="." index="3"]
autostart = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource("5_cqh6p")
script = ExtResource("6_q54f1")
min_random_pitch = 0.5
max_random_pitch = 1.5

[node name="collision" parent="." index="5"]
visible = false
shape = SubResource("CircleShape2D_q7f57")

[node name="BuildingHitbox" parent="." index="7" node_paths=PackedStringArray("entity")]
entity = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildingHitbox" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_th3tk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
libraries = {
&"": SubResource("AnimationLibrary_cx17e")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildingPlacedColl" index="0"]
shape = SubResource("RectangleShape2D_3yn4l")

[connection signal="timeout" from="shoot_time" to="." method="_on_shoot_time_timeout"]
